# Splitter

./: README.md  index.html  pyproject.toml  requirements.txt  split_msg.py  test_split_msg.py
